# union

./: .travis.yml  LICENSE  README.md  stack.yaml  union.cabal
.github/workflows/: ci.yml
bench/: Benchmark.hs
src/Data/: Union.hs
src/Data/Union/: Prism.hs
