name:                union
version:             0.1.2
synopsis:            Extensible type-safe unions
description:

    Extensible type-safe unions for Haskell with prisms using modern
    GHC features. Dual to vinyl records. Unions are also known as
    corecords or polymorphic variants.

    Neither requires a @Typeable@ constraint nor uses unsafe coercions
    at the cost of linear time access (negligible in practice).

license:             BSD3
license-file:        LICENSE
author:              Vladislav Zavialov
maintainer:          Vladislav Zavialov <vlad.z.4096@gmail.com>
bug-reports:         https://github.com/int-index/union/issues
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:int-index/union.git

library
  exposed-modules:     Data.Union
  other-modules:       Data.Union.Prism
  other-extensions:    DataKinds
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       LambdaCase
                       MultiParamTypeClasses
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       TypeOperators
  build-depends:       base >=4.8 && <4.13
               ,       vinyl >=0.5 && <0.11
               ,       profunctors >=5.1 && <5.4
               ,       tagged >=0.8 && <0.9
               ,       deepseq >=1.4 && <1.5
               ,       hashable >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  build-depends:       base
               ,       union
               ,       lens
               ,       deepseq >=1.4.2
               ,       criterion
  hs-source-dirs:      bench
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-orphans
